plugins {
    id 'java'
}

sourceCompatibility = 22
targetCompatibility = 22

group = 'com.oritatami-rule-designer' // 任意のグループID
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testRuntimeOnly 'net.bytebuddy:byte-buddy-agent:1.14.9'
    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
}

test {
    useJUnitPlatform()
    jvmArgs += ['-XX:+EnableDynamicAgentLoading']
}